<resources>
    <string name="app_name">translate_application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_wordbook">WordBook</string>
    <string name="menu_voice">Voice</string>
    <string name="menu_offline">Offline</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help">Help</string>
</resources>